--- a/DP/app/10001/10001.html
+++ b/DP/app/10001/10001.html
@@ -12,6 +12,11 @@
         <p>First name w: <input data-bind="value: fullNameW" /></p>
 
 
+
+        <p>First name: <input data-bind="value: DataContext.fullName" /></p>
+
+        <p>First name w: <input data-bind="value: DataContext.fullNameW" /></p>
+
         <button data-bind="click: alertA">alert</button>
 
     </div>
