10001和10002共享数据同步

--- a/DP/app/10001/10001.html
+++ b/DP/app/10001/10001.html
@@ -18,6 +18,7 @@
         <p>First name w: <input data-bind="value: DataContext.fullNameW" /></p>
 
         <button data-bind="click: alertA">alert</button>
+        <button data-bind="click: DataContext.alertA">Share alert</button>
 
     </div>
     </section>
