--- a/DP/index.html
+++ b/DP/index.html
@@ -23,6 +23,10 @@
     <script src="lib/consolejs/console.js"></script>
     <script src="lib/consolejs/functions.js"></script>
 
+    <!--<script src="lib/es6-promise.auto.min.js"></script>
+    <script src="lib/es6-sham.min.js"></script>
+    <script src="lib/es6-shim.min.js"></script>-->
+
     <script type="text/javascript">
         var debugInWebBrowser = false;
 
