--- a/DP/app/10005/10005.html
+++ b/DP/app/10005/10005.html
@@ -2,7 +2,7 @@
     <br />
     <div>
         10005
-        <br />
+        <!--<br />
         <p>BranchNo: <input type="text" data-bind="value: BranchNo" /></p>
         <p>BranchName:<input type="text" data-bind="value: BranchName" /></p>
         <p>Update BranchName:<input type="text" data-bind="value: UpdateBranchName" /></p>
@@ -12,10 +12,10 @@
         <p>TellerNo: <input type="text" data-bind="value: TellerNo" /></p>
         <p>TellerName:<input type="text" data-bind="value: TellerName" /></p>
         <p>Update TellerName:<input type="text" data-bind="value: UpdateTellerName" /></p>
-        <p><button type="button" data-bind="click:changeTeller">Teller</button></p>
+        <p><button type="button" data-bind="click:changeTeller">Teller</button></p>-->
 
 
-
+        <p>vmpName: <input type="text" data-bind="value: vmpName" /></p>
 
 
     </div>
