--- a/DP/app/10003/10003.html
+++ b/DP/app/10003/10003.html
@@ -1,20 +1,4 @@
-﻿<section>
-    <br/>
-    <div>
-        
-        100003
-        <br/>
-        <!--<span data-bind="text:DataContext['Trans']"></span>
-        
-        <ul class="nav nav-tabs" data-bind="foreach: Object.Keys(DataContext['Trans']), as 'obj'">
-            <li>
-                <span data-bind="text:obj[key]"></span>
-            </li>
-        </ul>-->
+﻿<p><input data-bind="value: myNumberOne" /> (round to whole number)</p>
+<p><input data-bind="value: myNumberTwo" /> (round to two decimals)</p>
 
 
-
-
-
-    </div>
-    </section>
