--- a/DP/app/10005/10005.html
+++ b/DP/app/10005/10005.html
@@ -2,20 +2,18 @@
     <br />
     <div>
         10005
-        <!--<br />
-        <p>BranchNo: <input type="text" data-bind="value: BranchNo" /></p>
-        <p>BranchName:<input type="text" data-bind="value: BranchName" /></p>
-        <p>Update BranchName:<input type="text" data-bind="value: UpdateBranchName" /></p>
-        <p><button type="button" data-bind="click:changeSytem">System</button></p>
+        <br />
+        <!--<p>BranchNo: <input type="text" data-bind="value:data.System.BranchNo" /></p>
+        <p>BranchName:<input type="text" data-bind="value: System.BranchName" /></p>-->
+        <p>Update BranchName:<input type="text" data-bind="value:TransNo" /></p>
+        <!--<p><button type="button" data-bind="click:changeSytem">System</button></p>
 
         <br />
         <p>TellerNo: <input type="text" data-bind="value: TellerNo" /></p>
         <p>TellerName:<input type="text" data-bind="value: TellerName" /></p>
         <p>Update TellerName:<input type="text" data-bind="value: UpdateTellerName" /></p>
         <p><button type="button" data-bind="click:changeTeller">Teller</button></p>-->
-
-
-        <p>vmpName: <input type="text" data-bind="value: vmpName" /></p>
+        <!--<p>vmpName: <input type="text" data-bind="value: vmpName" /></p>-->
 
 
     </div>
