--- a/DP/app/10005/10005.html
+++ b/DP/app/10005/10005.html
@@ -3,18 +3,23 @@
     <div>
         10005
         <br />
-        <!--<p>BranchNo: <input type="text" data-bind="value:data.System.BranchNo" /></p>
+        <!--<p>BranchNo: <input type="text" data-bind="value:System.BranchNo" /></p>
         <p>BranchName:<input type="text" data-bind="value: System.BranchName" /></p>-->
-        <p>Update BranchName:<input type="text" data-bind="value:TransNo" /></p>
-        <!--<p><button type="button" data-bind="click:changeSytem">System</button></p>
+       <!--<p><button type="button" data-bind="click:changeSytem">System</button></p>-->
 
         <br />
-        <p>TellerNo: <input type="text" data-bind="value: TellerNo" /></p>
+        <!-- <p>TellerNo: <input type="text" data-bind="value: TellerNo" /></p>
         <p>TellerName:<input type="text" data-bind="value: TellerName" /></p>
         <p>Update TellerName:<input type="text" data-bind="value: UpdateTellerName" /></p>
         <p><button type="button" data-bind="click:changeTeller">Teller</button></p>-->
         <!--<p>vmpName: <input type="text" data-bind="value: vmpName" /></p>-->
 
-
+        <p>TransNo:<input type="text" data-bind="value:TransNo" /></p>
+        <p>TransAmount:<input type="text" data-bind="value:TransAmount" /></p>
+        <p>vmpTransNo: <input type="text" data-bind="value: vmpTransNo" /></p>
+        <p>
+            <button type="button" data-bind="click:alertTransNo">alert</button>
+            <button type="button" data-bind="click:changeTransNo">changeTransNo</button>
+        </p>
     </div>
 </section>
