Share由Object.defineProperty修改成ko.extend

--- a/DP/app/10005/10005.html
+++ b/DP/app/10005/10005.html
@@ -3,17 +3,18 @@
     <div>
         10005
         <br />
-        <!--<p>BranchNo: <input type="text" data-bind="value:System.BranchNo" /></p>
-        <p>BranchName:<input type="text" data-bind="value: System.BranchName" /></p>-->
-       <!--<p><button type="button" data-bind="click:changeSytem">System</button></p>-->
+        <p>BranchNo: <input type="text" data-bind="value:System.BranchNo" /></p>
+        <p>BranchName:<input type="text" data-bind="value: System.BranchName" /></p>
+        <p><button type="button" data-bind="click:changeBranchName">changeBranchName</button></p>
 
         <br />
-        <!-- <p>TellerNo: <input type="text" data-bind="value: TellerNo" /></p>
-        <p>TellerName:<input type="text" data-bind="value: TellerName" /></p>
-        <p>Update TellerName:<input type="text" data-bind="value: UpdateTellerName" /></p>
+        <p>TellerNo: <input type="text" data-bind="value:Teller.TellerNo" /></p>
+        <p>TellerName:<input type="text" data-bind="value:Teller.TellerName" /></p>
+        <!--<p>Update TellerName:<input type="text" data-bind="value: UpdateTellerName" /></p>
         <p><button type="button" data-bind="click:changeTeller">Teller</button></p>-->
         <!--<p>vmpName: <input type="text" data-bind="value: vmpName" /></p>-->
 
+        <br />
         <p>TransNo:<input type="text" data-bind="value:TransNo" /></p>
         <p>TransAmount:<input type="text" data-bind="value:TransAmount" /></p>
         <p>vmpTransNo: <input type="text" data-bind="value: vmpTransNo" /></p>
