--- a/DP/app/10005/10005.html
+++ b/DP/app/10005/10005.html
@@ -22,5 +22,19 @@
             <button type="button" data-bind="click:alertTransNo">alert</button>
             <button type="button" data-bind="click:changeTransNo">changeTransNo</button>
         </p>
+
+        <select data-bind="options: Province,
+                       optionsText: 'value',
+                       optionsValue:'code',
+                       optionsCaption: '请选择',
+                       value:ProvinceCode,
+                       event:{change:changepv}
+                       "></select>
+        
+        <select data-bind="options: City,
+                       optionsText: 'value',
+                       value: 'code',
+                       optionsCaption: '请选择',
+                       "></select>
     </div>
 </section>
