--- a/DP/app/10005/10005.html
+++ b/DP/app/10005/10005.html
@@ -3,13 +3,13 @@
     <div>
         10005
         <br />
-        <p>BranchNo: <input type="text" data-bind="value:System.BranchNo" /></p>
+        <!--<p>BranchNo: <input type="text" data-bind="value:System.BranchNo" /></p>
         <p>BranchName:<input type="text" data-bind="value: System.BranchName" /></p>
         <p><button type="button" data-bind="click:changeBranchName">changeBranchName</button></p>
 
         <br />
         <p>TellerNo: <input type="text" data-bind="value:Teller.TellerNo" /></p>
-        <p>TellerName:<input type="text" data-bind="value:Teller.TellerName" /></p>
+        <p>TellerName:<input type="text" data-bind="value:Teller.TellerName" /></p>-->
         <!--<p>Update TellerName:<input type="text" data-bind="value: UpdateTellerName" /></p>
         <p><button type="button" data-bind="click:changeTeller">Teller</button></p>-->
         <!--<p>vmpName: <input type="text" data-bind="value: vmpName" /></p>-->
