区域联动，注册回调和datacontext 脱离 main.js

--- a/DP/app/10005/10005.html
+++ b/DP/app/10005/10005.html
@@ -30,10 +30,29 @@
                        value:ProvinceCode,
                        event:{change:changepv}
                        "></select>
-        
+
         <select data-bind="options: City,
                        optionsText: 'value',
-                       value: 'code',
+                       optionsValue:'code',
+                       value: CityCode,
+                       optionsCaption: '请选择',
+                       "></select>
+
+        <br />
+        <br />
+        <br />
+        <select data-bind="options: addr,
+                       optionsText: 'value',
+                       optionsValue:'code',
+                       optionsCaption: '请选择',
+                       value:addrCode,
+                       event:{change:changeAddr}
+                       "></select>
+
+        <select data-bind="options: addrChildren,
+                       optionsText: 'value',
+                       optionsValue:'code',
+                       value: CityCode,
                        optionsCaption: '请选择',
                        "></select>
     </div>
